# money_manager_bot

./: .env.dev  .gitignore  .pre-commit-config.yaml  README.md  cleanup_logs.sh  docker-compose.dev.yml  docker-compose.yml  manage.py  pyproject.toml  start.sh
.github/actions/setup-env/: action.yml
.github/workflows/: ci.yml
docker/: Dockerfile
money_manager/: config.py  logging.py  settings.py  urls.py  wsgi.py
money_manager/celery/: __init__.py  app.py  beat.py  tasks.py
money_manager/logger/: formatter.py  setup.py
money_manager/logging/: setup.py
tbot/: constants.py  decorators.py  errors.py  keyboards.py  user_states.py  utils.py
tbot/ai/: gpt.py  memory.py  utils.py
tbot/clients/: base.py
tbot/clients/monobank/: client.py  mono_client.py
tbot/clients/walletapp/: client.py
tbot/controller/: base.py  integrity.py
tbot/controllers/: ai.py  base.py  integration.py  integrity.py  transaction.py  wallet_settings.py
tbot/dependencies/: redis.py
tbot/dispatcher/: __init__.py  base.py  integration.py
tbot/dispatchers/: ai.py  base.py  helper.py  integration.py  transaction.py  wallet_settings.py
tbot/enums/: users.py
tbot/handler/: __init__.py  base.py  integration.py  transactions.py
tbot/handlers/: ai.py  base.py  helper.py  integration.py  transaction.py  wallet_settings.py
tbot/shell/: main.py  monobank.py
tbot_base/: admin.py  apps.py  bot.py  controllers.py  exceptions.py  models.py  urls.py  views.py
tbot_base/migrations/: 0001_initial.py  0002_users_alter_botconfig_options_alter_botconfig_link_and_more.py  0003_rename_users_botusers.py  0004_alter_botusers_user_id.py  0005_alter_botusers_user_id.py  0006_remove_botusers_id_alter_botusers_user_id.py  0007_alter_botusers_first_name_alter_botusers_last_name_and_more.py  0008_alter_botusers_first_name_alter_botusers_last_name.py  0009_alter_botusers_user_id_alter_botusers_user_name.py  0010_userpayments_botusers_free_items_and_more.py  0011_remove_botusers_free_items_botusers_free_attempts.py  0012_remove_botusers_free_attempts.py  0013_userintegrations.py  0014_botusers_chat_id_and_more.py  0015_remove_userintegrations_user_id_and_more.py  0016_alter_userintegrations_monobank_token_and_more.py  0017_alter_userintegrations_user.py  0018_alter_userintegrations_monobank_token.py  0019_alter_userintegrations_wallet_app_login.py  0020_userwalletlabel.py  0021_alter_userwalletlabel_user.py  0022_alter_userintegrations_wallet_app_login_and_more.py  0023_usercategories.py  0024_remove_usercategories_unique_user_category_id_category_type_and_more.py  0025_usertransactions.py
tbot_base/repository/: base.py  bot_user.py  user_categories.py  user_integration.py  user_transaction.py  wallet_label.py
tbot_base/security/: encrypting.py
(+23 files in other folders)
