[tool.poetry]
name = "money-manager-bot"
version = "0.1.0"
description = ""
package-mode = false
authors = ["vladyslav <vlad.bashtannyk11@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
loguru = "^0.7.2"
telebot = "^0.0.5"
validators = "^0.28.1"
orjson = "^3.10.1"
cryptography = "^42.0.5"
pydantic-settings = "^2.2.1"
pydantic = "^2.7.1"
selenium = "^4.20.0"
enums = "^0.0.2"
ruff = "^0.4.2"
pre-commit = "^3.7.0"
celery = "^5.4.0"
redis = "^5.0.4"
django-celery-beat = "^2.6.0"
psycopg2-binary = "^2.9.9"
psycopg2 = "^2.9.9"
django-heroku = "^0.3.1"
webdriver-manager = "^4.0.1"
structlog = "^24.1.0"
black = "^24.4.2"
pytz = "^2024.1"
dateutils = "^0.6.12"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]

[tool.ruff]
line-length = 120
target-version = "py311"


[tool.ruff.lint]
select = [
    "F", # Pyflakes
    "W", # pycodestyle
    "E", # pycodestyle
    "C", # mccabe
    "I", # isort
    "N", # pep8-naming
    "UP", # pyupgrade
    "ASYNC", # flake8-async
    "S", # flake8-bandit
    "BLE", # flake8-blind-except
    "FBT", # flake8-boolean-trap
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "COM", # flake8-commas
    "C4", # flake8-comprehensions
    "T20", # flake8-print
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "FA", # flake8-future-annotations
    "G", # flake8-logging-format
    "INP", # flake8-no-pep420
    "PIE", # flake8-pie
    "PT", # flake8-pytest-style
    "Q", # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "RUF", # Ruff
]
ignore = [
    "RUF012",
    "S603",
    "A003",
    "N813",
    "S314",
    "B027",
    "BLE001",
    "DTZ007",
    "N805",
    "B008",
    "S104",
    "T201",
    "RUF001",
    "FBT001",
    "FBT002",
    "RET502",
    "RUF013",
    "FBT003",
    "COM812",
    "F403",
    "DTZ006",
]
unfixable = [
]
exclude = [
    "./tests/**",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
